// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect ATTRIBUTES should list isOpen 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect ATTRIBUTES should list loading 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <div
        class="loader-wrapper"
      >
        <div
          class="loader-container"
        >
          <span
            class="loader-element"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelect ATTRIBUTES should render noData template 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect ATTRIBUTES should render noData template 2`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value="clear"
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <div
        class="nodata"
      >
        Ничего не найдено
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelect HANDLERS should test onBlur 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        name="name"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect HANDLERS should test onBlur 2`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        name="name"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect HANDLERS should test onChange 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        name="name"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect HANDLERS should test onDeselect 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper focused"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        name="name"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect HANDLERS should test onDeselect by clear button 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper focused"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
        <span
          class="multiselect-clear-icon"
        />
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        name="name"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect HANDLERS should test onFocus 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper focused"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        name="name"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect SNAPSHOTS should render basic usage 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value1
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect SNAPSHOTS should render data in controllable mode 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect SNAPSHOTS should render data in controllable mode 2`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value1
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect SNAPSHOTS should render value in controllable mode 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value0
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect SNAPSHOTS should render value in controllable mode 2`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          value1
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        class="multiselect-input"
        value=""
      />
    </div>
  </div>
</div>
`;
